# NSU_OPP

./: .gitignore
opp1/opp_a/: lab1a.c
opp1/opp_b/: lab1b.c
opp2/opp_a/: CMakeLists.txt  lab2a.c
opp2/opp_b/: CMakeLists.txt  lab2b.c
